--- a/functions.ipynb
+++ b/functions.ipynb
@@ -25,6 +25,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Korisni termini:\n",
+    "<ul>\n",
+    "    <li><em>True positives (TP)</em>: transakcije koje su prevare i naš model ih je ispravno klasificirao (kao prevare)</li>\n",
+    "    <li><em>False positives (FP)</em>: transakcije koje su valjane, ali naš model ih je pogrešno klasificirao (kao prevare)</li>\n",
+    "    <li><em>True negatives (TN)</em>: transakcije koje su valjane i naš model ih je ispravno klasificirao (kao valjane)</li>\n",
+    "    <li><em>False negatives (FN)</em>: transakcije koje su prevare, ali naš model ih je pogrešno klasificirao (kao valjane)</li> <br>\n",
+    "    <li><em>Precision (hrv. preciznost, oznaka: <i>P</i>)</em> -  omjer transakcija koje je model ispravno klasificirao kao prevare i svih transakcija koje je klasificirao kao prevare. Formulom: $P = \\frac{TP}{TP + FP}$</li>\n",
+    "    <li><em>Recall (hrv. osjetljivost, oznaka: <i>R</i>)</em> -  omjer transakcija koje je model ispravno klasificirao kao prevare i svih transakcija koje ustvari jesu prevare. Formulom: $R = \\frac{TP}{TP + FN}$</li>\n",
+    "    <li><em>F1-score(hrv. f1-mjera, oznaka: <i>F1</i>)</em> - mjera koja povezuje preciznost i osjetljivost formulom: $F1 = \\frac{2PR}{P + R}$</li>\n",
+    "</ul>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sljedeću funkciju koristit ćemo da bi ispisali preciznost, osjetljivost i f1-mjeru. Primjetimo da ih ne trebamo računati ručno po formulama koje smo naveli, već ćemo samo koristiti funkcije implementirane u biblioteci <i>sklearn.metrics</i>. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -34,6 +58,13 @@
     "    print('\\tPrecision score: ' + str(round(precision_score(correct, predicted), 4) * 100) + '%')\n",
     "    print('\\tRecall score: ' + str(round(recall_score(correct, predicted), 4) * 100) + '%')\n",
     "    print('\\tF1 score: ' + str(round(f1_score(correct, predicted), 4) * 100) + '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Također da bi bolje procijenili 'kvalitetu' našeg modela crtamo i konfuzijsku matricu (odnosno 2). Lijeva konfuzijska matrica će nam služiti da bi izvukli čiste brojčane vrijednosti (primjerice koliko smo prevara ispravno klasificirali - dolje desno), dok ćemo desnu konfuzijsku matricu koristiti da bi dobili relativne vrijednosti (primjerice postotak ispravno klasificiranih prevara - isto dolje desno). "
    ]
   },
   {
@@ -60,6 +91,13 @@
     "               xticklabels=labels, yticklabels=labels)\n",
     "    \n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kao zadnju metriku ćemo koristiti roc krivulju te PR krivulju. Doduše njih možemo nacrtati samo za logističku regresiju. "
    ]
   },
   {
@@ -102,6 +140,13 @@
     "    plt.title('Precision Recall Curve')\n",
     "    plt.legend()\n",
     "    plt.show();\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Još ćemo dodati funkciju <i>print_everything</i> koja nam omogućuje da u jednom retku ispišemo sve ranije navedene funkcije."
    ]
   },
   {
