updates + (roc_auc , pr curves)

--- a/preprocessing_ccfd.ipynb
+++ b/preprocessing_ccfd.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,13 +328,450 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import RepeatedStratifiedKFold\n",
     "rskf = RepeatedStratifiedKFold(n_splits=5, n_repeats=3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parametri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#popis klasifikatora koje koristimo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistička regresija"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo kod linearne regresije su:\n",
+    "<ul>\n",
+    "    <li><em>C</em> - regularizacijski parametar, inverzno proporcionalan $\\lambda$ regulatoru. </li>\n",
+    "    <li><em>penalty</em> - određuje koju regularizacijsku tehniku koristimo\n",
+    "        <ul>\n",
+    "            <li><i>ridge (l2)</i> - kazna je \"kvadratna veličina\" koeficjenata\n",
+    "                \\[\n",
+    "                rCost = \\sum_{i = 1}^{n}\\bigg(y_i - \\sum_{j=1}^{p}x_{ij}\\beta_j \\bigg)^2  + \\lambda \\sum_{j=1}^{p} \\beta_j^2\n",
+    "                \\]</li>\n",
+    "            <li><i>lasso (l1)</i> - kazna je \"apsolutna vrijednost veličine\" koeficjenata \n",
+    "            \\[\n",
+    "            lCost = \\sum_{i = 1}^{n}\\bigg(y_i - \\sum_{j=1}^{p}x_{ij}\\beta_j \\bigg)^2  + \\lambda \\sum_{j=1}^{p} \\mid\\beta_j\\mid\n",
+    "            \\]</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "log_reg_c_params = [0.01, 0.1, 1, 10, 100]\n",
+    "log_reg_penalties = ['l1','l2']\n",
+    "log_reg_params = {\"penalty\": log_reg_penalties, 'C': log_reg_c_params}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stabla odluke"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo kod stabala odluke:\n",
+    "<ul>\n",
+    "    <li><em>kriterij</em> - funkcija kvalitete podjele\n",
+    "        <ul>\n",
+    "            <li><i>gini</i> - kriterij koji koristimo da smanjimo vjerojatnost pogrešne klasifikacije\n",
+    "            \\[\n",
+    "            Gini = 1 - \\sum_j p_j^2\n",
+    "            \\]</li>\n",
+    "            <li><i>entropy</i> - kriterij koji koristimo da smanjimo nečistoću podjele\n",
+    "            \\[\n",
+    "            Entropy = - \\sum_j p_j log_2p_j\n",
+    "            \\]</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion_params = ['gini', 'entropy']\n",
+    "splitter_params = ['best', 'random']\n",
+    "max_depth_params = [1, 2, 3, 4, 5, 6, 7]\n",
+    "min_samples_leaf_params = [1, 3, 5, 7]\n",
+    "dt_params = {'criterion': criterion_params, 'splitter': splitter_params, 'max_depth': max_depth_params, 'min_samples_leaf': min_samples_leaf_params}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bagging klasifikator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo na bagging klasifikatoru na stablima odluke:\n",
+    "<ul>\n",
+    "    <li><em>broj procjenitelja</em> - određuje broj stabala odluke u ansamblu </li>\n",
+    "    <li><em>maksimalan udio podataka</em> - određuje udio koji 'vadimo' iz trening skupa kod treniranja svakog procjenitelja</li>\n",
+    "    <li><em>maksimalan udio značajki</em> - određuje udio značajki koje koristimo prilikom treniranja </li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_estimators_params = [5, 7, 10, 12, 20, 50, 100]\n",
+    "max_samples_params = [0.5, 0.7, 0.9, 1.0]\n",
+    "max_features_params = [0.3, 0.5, 0.7, 0.9, 1.0]\n",
+    "bag_params = {'n_estimators': num_estimators_params, 'max_samples': max_samples_params,\n",
+    "              'max_features': max_features_params}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Slučajne šume"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje promatramo kod slučajnih šuma:\n",
+    "<ul>\n",
+    "    <li><em>kriterij</em> - poprima vrijednosti <i>gini</i> ili <i>entropy</i> koji su isto definirani kao i kod stabala odluke</li>\n",
+    "    <li><em>broj procjenitelja</em> - određuje broj stabala u slučajnoj šumi</li>\n",
+    "    <li><em>maksimalna dubina</em> - određuje maksimalnu dubinu svakog stabla u šumi</li>\n",
+    "    <li><em>minimalan broj list</em> - određuje koliko primjeraka najmanje smije bit u listu stabla</li>\n",
+    "    <li><em>težina klasa</em> - određuje težine koje dodjeljujemo klasama prilikom klasifikacije (valjana, prevara)\n",
+    "        <ul>\n",
+    "            <li><i>balanced</i> - određuje težine tako da uzima broj pojavljivanja klasa u ulaznim podacima</li>\n",
+    "            <li><i>balanced_subsample</i> - isto kao i <i>balanced</i>, ali su u ovom slučaju težine bazirane na bootstrap primjerku svakog stabla koje se gradi</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion_params = ['gini', 'entropy']\n",
+    "num_estimators_params = [5, 10, 50, 100]\n",
+    "max_depth_params = [1, 2, 3, 4, 5, 7, 9]\n",
+    "min_samples_leaf_params = [1, 3, 5, 7]\n",
+    "class_weight_params = ['balanced', 'balanced_subsample']\n",
+    "rf_params = {'criterion': criterion_params, 'n_estimators': num_estimators_params, 'max_depth': max_depth_params,\n",
+    "             'min_samples_leaf': min_samples_leaf_params, 'class_weight': class_weight_params}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Metoda najbližih susjeda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo kod metode najbližih susjeda:\n",
+    "<ul>\n",
+    "    <li><em>broj susjeda</em> - određuje koliko najbližih susjeda sudjeluje u 'glasanju' prilikom klasifikacije nekog primjerka</li>\n",
+    "    <li><em>algoritam</em> - određuje algoritam koji koristimo da bi pronašli najbliže susjede \n",
+    "        <ul>\n",
+    "            <li><i>ball tree</i> - dijeli primjerke podataka u ugniježđene skupove hipersfera koje nazivamo loptama (balls)</li>\n",
+    "            <li><i>KD tree</i> - dijeli primjerke podataka u k-dimenzionalne kocke</li>\n",
+    "            <li><i>brute</i> - koristi dobro poznati pristup grubom silom</li>\n",
+    "            <li><i>auto</i> - automatski pokušava utvrditi koji je najprikladniji algoritam na temelju podataka koje prima <i>fit</i> metoda\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    <li><em>p (power)</em> - biramo koji algoritam koristimo da bi mjerili udaljenost\n",
+    "        <ul>\n",
+    "            <li><i>manhattan udaljenost (1)</i> - $d_1(p,q) = \\sum_{i=1}^n \\mid p_i - q_i \\mid$</li>\n",
+    "            <li><i>euklidska udaljenost (2)</i> - $d_2(p,q) = \\sqrt{\\sum_{i=1}^n  (p_i - q_i)^2 }$</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_neighbors_params = [1, 2, 3, 4, 5, 7, 9]\n",
+    "alg_params = ['auto', 'brute', 'ball_tree', 'kd_tree']\n",
+    "p_params = [1, 2]\n",
+    "\n",
+    "knn_params = {'n_neighbors': num_neighbors_params, 'algorithm': alg_params, 'p': p_params, 'metric': ['minkowski']}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Metoda potpornih vektora"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo za metodu potpornih vektora:\n",
+    "<ul>\n",
+    "    <li><em>C</em> - regularizacijski parametar, ima istu ulogu kao i u logističkoj regresiji</li>\n",
+    "    <li><em>kernel</em> - određuje funkciju koja omogućava rad u više-dimenzionalnom prostoru bez da ikad izračuna koordinate u tom višedimenzionalnom prostoru, već koristi unutarnje produkte slika svih parova podataka u prostoru značajki\n",
+    "        <ul>\n",
+    "            <li><i>linear</i> - koristi linearnu plohu da podijeli podatke, formula: $K(X,Y) = X^TY$</li>\n",
+    "            <li><i>poly</i> - koristi polinom da podijeli podatke, formula: $K(X,Y) = (\\gamma \\cdot X^TY + r)^d$</li>\n",
+    "            <li><i>sigmoid</i> - koristi sigmoidalnu funkciju da podijeli podatke, formula: $K(X,Y) = \\tanh(\\gamma \\cdot X^TY + r)$</li>\n",
+    "            <li><i>rbf</i> -  koristi krivulje koje okružuju podatke i sumira ih tako da granica podjele bude definirana topološkim uvjetom, formula: $K(X,Y) = \\exp \\bigg( \\frac{\\mid \\mid X - Y\\mid \\mid^2}{2\\sigma^2} \\bigg)$</li>\n",
+    "        </ul>\n",
+    "    <li><em>stupanj</em> (u formuli za <i>poly</i> označen s d) - određuje stupanj polinoma</li>\n",
+    "    <li><em>gamma</em> (u formulama za <i>poly</i> i <i>sigmoid</i> označen s $\\gamma$) - određuje koeficijent</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc_c_params = [0.001, 0.01, 0.1, 1, 10, 1]\n",
+    "kernel_params = ['linear', 'poly', 'sigmoid', 'rbf']\n",
+    "degree_params = [1, 2, 3, 4, 5]\n",
+    "gamma_params = ['scale', 'auto', 0.001, 0.01, 0.1, 1, 10]\n",
+    "svc_params = {'C': svc_c_params, 'kernel': kernel_params, 'degree': degree_params, 'gamma': gamma_params }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Boosting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Za boosting ćemo koristiti 4 različita algoritma te usporediti njihove rezultate. Algoritmi koje koristimo su:\n",
+    "<ol>\n",
+    "    <li>XGB (eXtreme Gradient Boosting)</li>\n",
+    "    <li>LGBM (Light Gradient Boosting Method)</li>\n",
+    "    <li>CatBoost (CATegorical Boosting)</li>\n",
+    "    <li>AdaBoost (ADAptive Boosting)</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### XGB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo kod XGB-a:\n",
+    "<ul>\n",
+    "    <li><em>gamma</em> - regularizacijski parametar 'kroz sva stabla'</li>\n",
+    "    <li><em>maksimalna dubina</em> - maksimalna dubina svakog stabla</li>\n",
+    "    <li><em>udio stupaca po stablu</em> - udio značajki koje upotrebljavamo za konstrukciju svakog novog stabla</li>\n",
+    "    <li><em>stopa učenja</em> - određuje koliko koraka treba napraviti (što je stopa manja, imamo više koraka, odnosno sporije učenje, ali možda i precizniji model)</li>\n",
+    "    <li><em>broj procjenitelja</em> - broj stabala koji koristimo prilikom treniranja</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_gamma = [0, 1, 5, 10]\n",
+    "xgb_max_depth = [1, 2, 3, 4, 5, 7]\n",
+    "xgb_colsample_bytree = [0.3, 0.5, 0.8]\n",
+    "xgb_learning_rate = [0.3, 0.1, 0.05, 0.01]\n",
+    "xgb_n_estimators = [10, 20, 50, 100]\n",
+    "xgb_params = {'gamma': xgb_gamma, 'max_depth': xgb_max_depth, 'colsample_bytree': xgb_colsample_bytree, \n",
+    "              'learning_rate': xgb_learning_rate, 'n_estimators': xgb_n_estimators}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### LGBM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo kod LGBM-a:\n",
+    "<ul>\n",
+    "    <li><em>tip boostinga</em> - određuje koji od sljedećih algoritama koristimo za boosting\n",
+    "        <ul>\n",
+    "            <li><i>gdbt (Gradient Boosting Decision Tree)</i> - tradicionalna stabla odluke trenirana u nekom određenom  redoslijedu (u svakom koraku model pokušava naučiti razliku između stvarnog izlaza i težinske sume predikcija prethodne iteracije)</li>\n",
+    "            <li><i>goss (Gradient-based One Sided Sampling)</i> -  metoda koja se zasniva na odbacivanju instanci s malim gradijentom (jer su te već dobro trenirane), te se fokusira samo na one s većim gradijentom</li>\n",
+    "            <li><i>rf (Random Forest)</i> - klasičan pristup korištenjem slučajnih šuma</li>\n",
+    "            <li><i>dart (Dropouts meets multiple Additive Regression Trees)</i> - novija metoda u koju je dropout tehnika korištena najviše kod dubokih neuronskih mreža</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    <li><em>maksimalna dubina</em> - ima isto značenje kao i kod XGB-a</li>\n",
+    "    <li><em>udio stupaca po stablu</em> - ima isto značenje kao i kod XGB-a</li>\n",
+    "    <li><em>stopa učenja</em> - ima isto značenje kao i kod XGB-a</li>\n",
+    "    <li><em>broj procjenitelja</em> - ima isto značenje kao i kod XGB-a</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgbm_boosting_type = ['gbdt', 'goss', 'rf', 'dart']\n",
+    "lgbm_max_depth = xgb_max_depth\n",
+    "lgbm_learning_rate = xgb_learning_rate\n",
+    "lgbm_colsample_bytree = xgb_colsample_bytree\n",
+    "lgbm_n_estimators = xgb_n_estimators\n",
+    "lgbm_params = {'boosting_type': lgbm_boosting_type, 'max_depth': lgbm_max_depth, 'colsample_bytree': lgbm_colsample_bytree, \n",
+    "               'learning_rate': lgbm_learning_rate, 'n_estimators': lgbm_n_estimators}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### CatBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo kod CatBoosta:\n",
+    "<ul>\n",
+    "    <li><em>dubina</em> - isto značenje kao i kod XGB-a</li>\n",
+    "    <li><em>stopa učenja</em> - isto značenje kao i kod XGB-a</li>\n",
+    "    <li><em>broj procjenitelja</em> - isto značenje kao i kod XGB-a</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_depth = xgb_max_depth\n",
+    "cat_learning_rate = xgb_learning_rate\n",
+    "cat_n_estimators = xgb_n_estimators\n",
+    "cat_params = {'depth': cat_depth, 'learning_rate': cat_learning_rate, 'n_estimators': cat_n_estimators }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### AdaBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parametri koje podešavamo kod AdaBoosta:\n",
+    "<ul>\n",
+    "    <li><em>procjenitelj</em> - procjenitelj kojeg AdaBoost koristi (u našem slučaju stablo odluke)\n",
+    "        <ul>\n",
+    "            <li><i>kriterij</i> - ima isto značenje kao i za stablo odluke</li>\n",
+    "            <li><i>splitter</i> - ima isto značenje kao i za stablo odluke</li>\n",
+    "            <li><i>maksimalna dubina</i> - ima isto značenje kao i za stablo odluke</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    <li><em>stopa učenja</em> - ima isto značenje kao i kod XGB-a</li>\n",
+    "    <li><em>broj procjenitelja</em> - ima isto značenje kao i kod XGB-a</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ada_criterion = ['gini', 'entropy']\n",
+    "ada_max_depth = xgb_max_depth\n",
+    "ada_splitter = ['best', 'random']\n",
+    "ada_n_estimators = xgb_n_estimators\n",
+    "ada_learning_rate = xgb_learning_rate\n",
+    "ada_params = {'n_estimators': ada_n_estimators, 'learning_rate': ada_learning_rate}\n",
+    "\n",
+    "ada_params = {\"base_estimator__criterion\" : [\"gini\", \"entropy\"],\n",
+    "              \"base_estimator__splitter\" :   [\"best\", \"random\"],\n",
+    "              \"base_estimator__max_depth\": xgb_max_depth,\n",
+    "              \"n_estimators\": xgb_n_estimators,\n",
+    "              \"learning_rate\": xgb_learning_rate\n",
+    "             }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
