--- a/functions.ipynb
+++ b/functions.ipynb
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_precision_recall_curve(correct, predicted):\n",
     "    precision, recall, threshold = precision_recall_curve(correct, predicted)\n",
     "    aupr = auc(recall, precision)\n",
-    "    plt.step(recall, precision, color = 'b', alpha = 0.2,\n",
-    "             where = 'post')\n",
-    "    plt.fill_between(recall, precision, step ='post', alpha = 0.2,\n",
+    "#     plt.step(recall, precision, color = 'b', alpha = 0.2,\n",
+    "#              where = 'post')\n",
+    "    plt.fill_between(recall, precision, alpha = 0.2,\n",
     "                 color = 'b')\n",
     "\n",
     "    plt.plot(recall, precision, linewidth=2, label=\"AUC = \" + str(round(aupr,3)))\n",
