added 0.5, 0.33 undersampling and ROC (PR)-curves

--- a/full_data_ccfd.ipynb
+++ b/full_data_ccfd.ipynb
@@ -637,18 +637,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bag_t_params_start = time.time()\n",
-    "grid_bag = GridSearchCV(BaggingClassifier(), bag_params)\n",
-    "grid_bag.fit(X_data_train, y_data_train)\n",
-    "bag_est = grid_bag.best_estimator_\n",
-    "bag_params = grid_bag.best_params_\n",
-    "print('Najbolji parametri: ' + str(bag_params))\n",
+    "# bag_t_params_start = time.time()\n",
+    "# grid_bag = GridSearchCV(BaggingClassifier(), bag_params)\n",
+    "# grid_bag.fit(X_data_train, y_data_train)\n",
+    "# bag_est = grid_bag.best_estimator_\n",
+    "# bag_params = grid_bag.best_params_\n",
+    "# print('Najbolji parametri: ' + str(bag_params))\n",
     "\n",
-    "bag_training_score_params = cross_val_score(bag_est, X_data_train, y_data_train, cv=rskf)\n",
-    "bag_t_params_end = time.time()\n",
-    "print('Rezultat treniranja za bagging klasifikator na stablima odluke (sa parametrima): ' \n",
-    "     + str(round(bag_training_score_params.mean(), 4) * 100) + '%')\n",
-    "print('Duljina treninga za bagging klasifikator na stablima odluke (sa parametrima): ' + str(round(bag_t_params_end - bag_t_params_start, 2)) + ' seconds.')"
+    "# bag_training_score_params = cross_val_score(bag_est, X_data_train, y_data_train, cv=rskf)\n",
+    "# bag_t_params_end = time.time()\n",
+    "# print('Rezultat treniranja za bagging klasifikator na stablima odluke (sa parametrima): ' \n",
+    "#      + str(round(bag_training_score_params.mean(), 4) * 100) + '%')\n",
+    "# print('Duljina treninga za bagging klasifikator na stablima odluke (sa parametrima): ' + str(round(bag_t_params_end - bag_t_params_start, 2)) + ' seconds.')"
    ]
   },
   {
@@ -657,8 +657,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_bag_params = bag_est.predict(X_data_test)\n",
-    "print_everything(y_data_test, pred_bag_params, y_data_test_non_fraud_num, y_data_test_fraud_num, None, False)"
+    "# pred_bag_params = bag_est.predict(X_data_test)\n",
+    "# print_everything(y_data_test, pred_bag_params, y_data_test_non_fraud_num, y_data_test_fraud_num, None, False)"
    ]
   },
   {
