table of contents 4 osampling and full data

--- a/oversampling_ccfd.ipynb
+++ b/oversampling_ccfd.ipynb
@@ -47,6 +47,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2> Sadržaj: </h2>\n",
+    "\n",
+    "<b>[Oversampling - uvod](#uvod)</b> <br> <br>\n",
+    "\n",
+    "<b>Klasifikatori:</b><br>\n",
+    "I. <b>[Logistička regresija](#lr):</b> <br>\n",
+    "    1)<em> [Random oversampling](#lr_rand_over)</em> <br>\n",
+    "    2)<em> [SMOTE](#lr_smote)</em> <br>\n",
+    "    3)<em> [ADASYN](#lr_adasyn)</em> <br>\n",
+    "    4)<em> [BorderlineSMOTE](#lr_bordersmote)</em> <br>\n",
+    "    5)<em> [Logistička regresija s parametrima](#lr_params)</em> <br> <br>\n",
+    "\n",
+    "II. <b>[Slučajne šume](#rf)</b> <br>\n",
+    "    1)<em> [Random oversampling](#rf_rand_over)</em> <br>\n",
+    "    2)<em> [SMOTE](#rf_smote)</em> <br>\n",
+    "    3)<em> [BorderSMOTE](#rf_bordersmote)</em> <br>\n",
+    "    4)<em> [ADASYN](#rf_adasyn)</em> <br><br>\n",
+    "    \n",
+    "\n",
+    "III. <b>[XGB](#xgb)</b> <br>\n",
+    "    1)<em> [Random oversampling](#xgb_rand_over)</em> <br>\n",
+    "    2)<em> [SMOTE](#xgb_smote)</em> <br>\n",
+    "    3)<em> [BorderSMOTE](#xgb_bordersmote)</em> <br>\n",
+    "    4)<em> [ADASYN](#xgb_adasyn)</em> <br><br>\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Oversampling uvod\n",
+    "<a id=\"uvod\"></a>\n",
     "Tehnike oversamplinga koje koristimo su:\n",
     "<ul>\n",
     "    <li>Nasumični oversampling</li>\n",
@@ -94,13 +127,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistička regresija"
+    "## Logistička regresija\n",
+    "<a class=\"anchor\" id=\"lr\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"lr_rand_over\"></a>\n",
     "Prva oversampling tehnika koju koristimo je nasumični oversampling."
    ]
   },
@@ -218,12 +253,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#SMOTE"
+    "#### Logistička regresija - SMOTE\n",
+    "<a id=\"lr_smote\"></a>"
    ]
   },
   {
@@ -343,12 +377,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# adasyn"
+    "#### Logistička regresija - ADASYN\n",
+    "<a id=\"lr_adasyn\"></a>"
    ]
   },
   {
@@ -465,6 +498,14 @@
    "metadata": {},
    "source": [
     "Sljedeća oversampling tehnika koju koristimo kod logističke regresije je ADASYN. Koristeći tu tehniku dobili smo prakitčno iste rezultate kao i sa SMOTE-om pa ih nećemo previše komentirati (čak i u vremenima za trening).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistička regresija - BorderlineSMOTE\n",
+    "<a id=\"lr_bordersmote\"></a>"
    ]
   },
   {
@@ -626,7 +667,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Logistička regresija s podešenim parametrima"
+    "#### Logistička regresija s podešenim parametrima\n",
+    "<a id=\"lr_params\"></a>"
    ]
   },
   {
@@ -879,7 +921,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Slučajne šume"
+    "## Slučajne šume\n",
+    "<a id=\"rf\"></a>\n",
+    "#### Slučajne šume - Nasumični oversampling\n",
+    "<a id=\"rf_rand_over\"></a>"
    ]
   },
   {
@@ -993,6 +1038,14 @@
    "metadata": {},
    "source": [
     "Prvo što bih spomenuo je da treniranje kod slučajnih šuma traje puno duže (za nasumični oversampling ~3h 40min). Rezultati su vrlo slični onima koje smo dobili i bez oversamplinga. Tako je preciznost vrlo visoka (98.73%), f1-mjera (88.14%) također, dok je osjetljivost nešto niža (79.59%).  Iz matrice konfuzije vidimo da je pogrešno klasificirana samo 1 valjana transakcija, no zato je pogrešno klasificirano čak i 20 prevara."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Slučajne šume - SMOTE\n",
+    "<a id=\"rf_smote\"></a>"
    ]
   },
   {
@@ -1228,11 +1281,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Slučajne šume - BorderlineSMOTE\n",
+    "<a id=\"rf_bordersmote\"></a>"
+   ]
   },
   {
    "cell_type": "code",
@@ -1347,6 +1401,14 @@
    "metadata": {},
    "source": [
     "Koristeći BorderlineSMOTE sa slučajnim šumama dobili smo značajno bolje rezultate nego sa logističkom regresijom. Sve tri osnovne mjere su u ovom slučaju preko 80%. Preciznost je 91.86%, osjetljivost 80.61%, a f1-mjera 85.87%, odnosno i preciznost i f1-mjera su drastično veće nego kod logističke regresije dok se osjetljivost razlikuje za samo par posto. Iz matrice konfuzije vidimo da je ovaj model ispravno klasificirao 79 prevara, te je pogrešno klasificirao 7 valjanih transakcija. Unatoč tome, ovaj model je nešto lošiji od prethodnog (koji koristi klasični SMOTE). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Slučajne šume - ADASYN\n",
+    "<a id=\"rf_adasyn\"></a>"
    ]
   },
   {
@@ -1556,7 +1618,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## XGB (eXtreme Gradient Boosting)"
+    "## XGB (eXtreme Gradient Boosting)\n",
+    "<a id=\"xgb\"></a>\n",
+    "#### XGB - Nasumični oversampling\n",
+    "<a id=\"xgb_rand_over\"></a>"
    ]
   },
   {
@@ -1677,6 +1742,14 @@
    "metadata": {},
    "source": [
     "Slučajnim oversamlpingom dobili smo dosta dobre rezultate koristeći XGB. Vidimo da je osjetljivost jako visoka (89.8%), dok su i preciznost (23.98%) te f1-mjera (37.85%). Iz matrice konfuzije vidimo da je čak 88 prevara ispravno klasificirano, dok je i pogrešno klasificiranih valjanih transakcija također dosta malo (oko 280). Vrijeme treniranja je kao i za sve ostale algoritma koji koriste oversampling prilično visoko (oko 2h 40min)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XGB - SMOTE\n",
+    "<a id=\"xgb_smote\"></a>"
    ]
   },
   {
@@ -1904,11 +1977,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#komentari"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XGB - BorderlineSMOTE\n",
+    "<a id=\"xgb_bordersmote\"></a>"
    ]
   },
   {
@@ -2024,6 +2105,14 @@
    "metadata": {},
    "source": [
     "Koristeći BorderlineSMOTE dobili smo također jako dobre rezultate. Vidimo da su i preciznost (35.8%) i f1-mjera (51.03%) dosta viši nego kod prethodnih modela (koji su za klasifikator koristili XGB), dok je osjetljivost (88.78%) malo manja (bila je 89.8%). Iz matrice konfuzije vidimo da je ispravno klasificirano 87 prevara, dok je pogrešno klasificirano svega ~160 valjanih transakcija."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XGB - ADASYN\n",
+    "<a id=\"xgb_adasyn\"></a>"
    ]
   },
   {
