--- a/preprocessing_ccfd.ipynb
+++ b/preprocessing_ccfd.ipynb
@@ -494,13 +494,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion_params = ['gini', 'entropy']\n",
-    "num_estimators_params = [5, 10, 50, 100]\n",
-    "max_depth_params = [1, 2, 3, 4, 5, 7, 9]\n",
+    "num_estimators_params = [5, 10, 20, 50, 100, 150, 200, 300]\n",
+    "max_depth_params = [1, 2, 3, 4, 5, 7, 9, None]\n",
     "min_samples_leaf_params = [1, 3, 5, 7]\n",
     "class_weight_params = ['balanced', 'balanced_subsample']\n",
     "rf_params = {'criterion': criterion_params, 'n_estimators': num_estimators_params, 'max_depth': max_depth_params,\n",
@@ -639,9 +639,9 @@
    "source": [
     "xgb_gamma = [0, 1, 5, 10]\n",
     "xgb_max_depth = [1, 2, 3, 4, 5, 7]\n",
-    "xgb_colsample_bytree = [0.3, 0.5, 0.8]\n",
+    "xgb_colsample_bytree = [0.5, 0.6, 0.7, 0.8, 0.9]\n",
     "xgb_learning_rate = [0.3, 0.1, 0.05, 0.01]\n",
-    "xgb_n_estimators = [10, 20, 50, 100]\n",
+    "xgb_n_estimators = [10, 20, 50, 100, 150, 200]\n",
     "xgb_params = {'gamma': xgb_gamma, 'max_depth': xgb_max_depth, 'colsample_bytree': xgb_colsample_bytree, \n",
     "              'learning_rate': xgb_learning_rate, 'n_estimators': xgb_n_estimators}"
    ]
